--- a/raport2/raport2.qmd
+++ b/raport2/raport2.qmd
@@ -99,7 +99,7 @@ test_methods <- c("wilson", "clopper-pearson", "jeffreys")
 colors <- c("blue", "green", "red")
 
 plot(p_values, power_function(n, alpha, p_values, method = test_methods[1]), type = "l", col = colors[1], lwd = 2,
-     xlab = "Prawdziwa wartość p", ylab = "Moc testu", main = "Funkcja mocy różnych metod", ylim = c(0, 1))
+     xlab = "Prawdziwa wartość p", ylab = "Moc testu", main = "Funkcja mocy różnych metod dla n=7", ylim = c(0, 1))
 lines(p_values, power_function(n, alpha, p_values, method = test_methods[2]), col = colors[2], lwd = 2)
 lines(p_values, power_function(n, alpha, p_values, method = test_methods[3]), col = colors[3], lwd = 2)
 
@@ -118,7 +118,7 @@ test_methods <- c("wilson", "clopper-pearson", "jeffreys")
 colors <- c("blue", "green", "red")
 
 plot(p_values, power_function(n, alpha, p_values, method = test_methods[1]), type = "l", col = colors[1], lwd = 2,
-     xlab = "Prawdziwa wartość p", ylab = "Moc testu", main = "Funkcja mocy różnych metod", ylim = c(0, 1))
+     xlab = "Prawdziwa wartość p", ylab = "Moc testu", main = "Funkcja mocy różnych metod dla n=35", ylim = c(0, 1))
 lines(p_values, power_function(n, alpha, p_values, method = test_methods[2]), col = colors[2], lwd = 2)
 lines(p_values, power_function(n, alpha, p_values, method = test_methods[3]), col = colors[3], lwd = 2)
 
@@ -138,7 +138,7 @@ test_methods <- c("wilson", "clopper-pearson", "jeffreys")
 colors <- c("blue", "green", "red")
 
 plot(p_values, power_function(n, alpha, p_values, method = test_methods[1]), type = "l", col = colors[1], lwd = 2,
-     xlab = "Prawdziwa wartość p", ylab = "Moc testu", main = "Funkcja mocy różnych metod", ylim = c(0, 1))
+     xlab = "Prawdziwa wartość p", ylab = "Moc testu", main = "Funkcja mocy różnych metod dla n=250", ylim = c(0, 1))
 lines(p_values, power_function(n, alpha, p_values, method = test_methods[2]), col = colors[2], lwd = 2)
 lines(p_values, power_function(n, alpha, p_values, method = test_methods[3]), col = colors[3], lwd = 2)
 
